# intersect

./: CMakeLists.txt  build.bat  build.sh  environment_map_prefiltering.md  intersect.cpp  intersect.h  intersectTest.cpp  readme.md
test/googletest/built/: CMakeLists.txt
